// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches snapshot with all props 1`] = `
.c0 {
  font-size: 34px;
  font-weight: 700;
  line-height: 40px;
  color: rgb(118,118,118);
  font-style: normal;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

<span
  class="c0"
  kind="headingM"
>
  Text
</span>
`;

exports[`Text matches snapshot with default props 1`] = `
.c0 {
  font-size: 15px;
  font-weight: 500;
  line-height: 19px;
  color: rgb(46,46,46);
  font-style: normal;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

<span
  class="c0"
>
  Text
</span>
`;
